Adddress comments; Add more test coverage